--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-runtine": "^1.0.1",
+    "better-scroll": "^1.13.2",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "vue": "^2.5.2",
