--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-runtine": "^1.0.1",
     "better-scroll": "^1.13.2",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
